io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalsynchronized1/C.java
package io.hotmoka.examples.errors.illegalsynchronized1;

public class C {
	public synchronized void foo() {
	}
}